// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload-user-avatar-by-id should handle non-existent temporary file id 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"Avatar file not found","status":400,"detail":"The file key did not resolve in to a file","operationStatus":"AvatarFileNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`upload-user-avatar-by-id should handle non-existent user id 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The user was not found","status":404,"detail":"The specified user was not found.","operationStatus":"UserNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`upload-user-avatar-by-id should upload avatar for user by id 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
